correction bug ouvrir  document,  sauvegarder document

--- a/src/app/appforum.component.html
+++ b/src/app/appforum.component.html
@@ -26,13 +26,15 @@
 
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button mdbBtn color="unique" class="waves-light" mdbWavesEffect>Submit Post
+        <button mdbBtn color="unique" class="waves-light" mdbWavesEffect type="submit" 
+                (click)=addPost()>Submit Post
           <i class="fa fa-paper-plane-o ml-1"></i>
         </button>
       </div>
     </div>
   </div>
 </div>
+
 
 <!--Section: Comments-->
 <section class="my-5">
