correction bug save forum

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,5 @@
 </div> 
 
 <div class="float-ld-right">  
-    <app-forum></app-forum> 
+    <app-forum (postChange)='myPostChange($event);' ></app-forum> 
 </div> 
