--- a/src/app/appforum.component.html
+++ b/src/app/appforum.component.html
@@ -26,8 +26,7 @@
 
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button mdbBtn color="unique" class="waves-light" mdbWavesEffect type="submit" 
-                (click)=addPost()>Submit Post
+        <button mdbBtn color="unique" class="waves-light" mdbWavesEffect (onclick)="addPost()">Submit Post
           <i class="fa fa-paper-plane-o ml-1"></i>
         </button>
       </div>
@@ -36,10 +35,10 @@
 </div>
 
 
-<!--Section: Comments-->
-<section class="my-5">
+<!--Section: Comments
+<section class="my-5"> -->
 
-    <!-- Card header -->
+    <!-- Card header 
     <div class="card-header border-0 font-weight-bold">2 comments</div>
   
     <div class="media d-block d-md-flex mt-4">
@@ -65,4 +64,5 @@
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque
             ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
           </div>
-        </div>
+        </div> 
+-->
