--- a/src/app/appforum.component.html
+++ b/src/app/appforum.component.html
@@ -6,9 +6,9 @@
     <div class="modal-content">
       <div class="modal-header text-center">
         <h4 class="modal-title w-100 font-weight-bold">Make comment</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
+        <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
           <span aria-hidden="true">&times;</span>
-        </button>
+        </button>-->
       </div>
       <div class="modal-body mx-3">
 
@@ -26,7 +26,7 @@
 
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button mdbBtn color="unique" class="waves-light" mdbWavesEffect (onclick)="addPost()">Submit Post
+        <button mdbBtn color="unique" class="waves-light" mdbWavesEffect data-toggle="modal" (click)="addPost()" (click)="frame.hide()" >Submit Post
           <i class="fa fa-paper-plane-o ml-1"></i>
         </button>
       </div>
