--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,33 @@
        <button mdbBtn type="button" color="default" class="waves-light" mdbWavesEffect (click)="getHtmlFromDelta()">Open Document </button>
 
           <button mdbBtn type="submit" color="primary" class="waves-light"
-				 mdbWavesEffect (click)=getDeltaOps()>Save Document
+				 mdbWavesEffect (click)="frame.show()">Save Document
            </button>
+<div mdbModal #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Enter document name</h4>
+    
+      </div>
+      <div class="modal-body mx-3">
+
+        <div class="md-form mb-5">
+          <i class="fa fa-tag prefix grey-text"></i>
+          <input type="text" id="form32" class="form-control validate" mdbInputDirective [formControl]="contactFormModalDocumentName">
+          <label data-error="wrong" data-success="right" for="form32"></label>
+        </div>
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button mdbBtn color="unique" class="waves-light" mdbWavesEffect data-toggle="modal" (click)="getDeltaOps()" (click)="frame.hide()" >Save document
+          <i class="fa fa-paper-plane-o ml-1"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
            
     
 </div> 
