--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,13 @@
 <div class="float-md-left">   
      <app-model [(html)]="htmls" (htmlChange)='myValueChange($event);' 
            (deltaChange)='myDeltaChange($event);'> </app-model>
-       <button mdbBtn type="button" color="default" class="waves-light" mdbWavesEffect (click)="getHtmlFromDelta()">Open Document </button>
+       <button mdbBtn type="button" color="default" class="waves-light" mdbWavesEffect (click)= "framebis.show()" >Open Document </button>
 
           <button mdbBtn type="submit" color="primary" class="waves-light"
 				 mdbWavesEffect (click)="frame.show()">Save Document
            </button>
+
+ <!-- Save document-->
 <div mdbModal #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -32,7 +34,18 @@
     </div>
   </div>
 </div>
-           
+   
+<!--Choisir doucument à ouvrir-->
+<mat-form-field>
+    <mat-select #framebis placeholder="choose document to open" (stateChanges)="getHtmlFromDelta()" [formControl]="documentControl" required>
+      <mat-option>--</mat-option>
+      <mat-option *ngFor="let document of listedocument" [value]="document">
+        {{document.id}}
+      </mat-option>
+    </mat-select>
+    <mat-error *ngIf="documentControl.hasError('required')">Please choose a document</mat-error>
+    <mat-hint>{{documentControl.value?.ops}}</mat-hint>
+  </mat-form-field>
     
 </div> 
 
