angular dynamic form

--- a/src/app/angularMatselect/src/stylesmatselect.scss
+++ b/src/app/angularMatselect/src/stylesmatselect.scss
@@ -1,11 +1,11 @@
-@import 'theme.scss';
+@import 'themematselect.scss';
 
 html, body {
   margin: 0;
   height: 100%;
 }
 
-my-app {
+app-select {
   display: block;
   height: 100vh;
 }
