--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,70 @@
-<!--<app-select [countries]="listedocument" ></app-select> -->
 
+<!-- Nav tabs -->
+<mdb-tabset #staticTabs [buttonClass]="'md-tabs tabs-4 pills-secondary white mb-2'" [contentClass]="'card'">
+    <!--Panel 1-->
+    <mdb-tab heading="Profile">
+      <div class="row">
+        <div class="col-12">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus
+            reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione
+            porro voluptate odit minima.</p>
+        </div>
+      </div>
+    </mdb-tab>
+    <!--Panel 2-->
+    <mdb-tab heading="Follow">
+      <div class="row">
+        <div class="col-12">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus
+            reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione
+            porro voluptate odit minima.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus
+            reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione
+            porro voluptate odit minima.</p>
+        </div>
+      </div>
+    </mdb-tab>
+    <!--Panel 3-->
+    <mdb-tab heading="Mail">
+      <div class="row">
+        <div class="col-12">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus
+            reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione
+            porro voluptate odit minima.</p>
+        </div>
+      </div>
+    </mdb-tab>
+    <!--Panel 4-->
+    <mdb-tab heading="Help">
+      <div class="row">
+        <div class="col-12">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus
+            reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione
+            porro voluptate odit minima.</p>
+        </div>
+      </div>
+    </mdb-tab>
+  </mdb-tabset>
 
-<form [formGroup]="countryForm">
- <select formControlName="countryControl">
-   <option [ngValue]="country" *ngFor="let country of listedocument">{{country.id}}</option>
+<!--<form [formGroup]="documentForm">
+ <select formControlName="documentsControl">
+   <option [ngValue]="documents" *ngFor="let documents of listedocument">{{documents.id}}</option>
  </select>
 <button (click)="addNewOption()">Document List</button>
  <button (click)="getHtmlFromDeltaWithPram()"> Open select document </button>
-
-</form>
-
+</form> -->
 <div class="float-md-left">   
+  <form [formGroup]="documentForm">
+    <select formControlName="documentsControl">
+      <option [ngValue]="documents" *ngFor="let documents of listedocument">{{documents.id}}</option>
+    </select>
+   <button mdbBtn type="button" color="default" class="waves-light" mdbWavesEffect (click)="addNewOption()">Document List</button>
+  <button (click)="getHtmlFromDeltaWithPram()"> Open select document </button>
+  </form>
      <app-model [(html)]="htmls" (htmlChange)='myValueChange($event);' 
-           (deltaChange)='myDeltaChange($event);'> </app-model>
-       <button mdbBtn type="button" color="default" class="waves-light" mdbWavesEffect (click)= "getHtmlFromDelta()" >Open Document </button>
-
-          <button mdbBtn type="submit" color="primary" class="waves-light"
-				 mdbWavesEffect (click)="frame.show()">Save Document
+         (deltaChange)='myDeltaChange($event);'> </app-model>
+  <button mdbBtn type="submit" color="primary" class="waves-light"
+			 mdbWavesEffect (click)="frame.show()">Save Document
            </button> 
 
  <!-- Save document-->
@@ -53,18 +101,4 @@
 </div> 
 
 
-
-<!--Choisir doucument à ouvrir
-<mat-form-field>
-    <mat-select placeholder="choose document to open"  [formControl]="documentControl" required>
-      <mat-option>--</mat-option>
-      <mat-option *ngFor="let document of listedocument" [value]="document">
-        {{document.id}}
-      </mat-option>
-    </mat-select>
-    <mat-error *ngIf="documentControl.hasError('required')">Please choose a document</mat-error>
-    <mat-hint>{{documentControl.value?.ops}}</mat-hint>
-  </mat-form-field>
-
- -->   
 
