--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,59 +1,21 @@
-
-
-
-<!--<form [formGroup]="documentForm">
- <select formControlName="documentsControl">
-   <option [ngValue]="documents" *ngFor="let documents of listedocument">{{documents.id}}</option>
- </select>
-<button (click)="addNewOption()">Document List</button>
- <button (click)="getHtmlFromDeltaWithPram()"> Open select document </button>
-</form> -->
-<div class="float-md-left">   
-  <form [formGroup]="documentForm">
-    <select formControlName="documentsControl">
-      <option [ngValue]="documents" *ngFor="let documents of listedocument">{{documents.id}}</option>
-    </select>
-   <button mdbBtn type="button" color="default" class="waves-light" mdbWavesEffect (click)="addNewOption()">Document List</button>
-  <button mdbBtn type="button" color="default" class="waves-light" (click)="getHtmlFromDeltaWithPram()"> Open select document </button>
-  </form>
-     <app-model [(html)]="htmls" (htmlChange)='myValueChange($event);' 
-         (deltaChange)='myDeltaChange($event);'> </app-model>
-  <button mdbBtn type="submit" color="primary" class="waves-light"
-			 mdbWavesEffect (click)="frame.show()">Save Document
-           </button> 
-
- <!-- Save document-->
-<div mdbModal #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Enter document name</h4>
-    
-      </div>
-      <div class="modal-body mx-3">
-
-        <div class="md-form mb-5">
-          <i class="fa fa-tag prefix grey-text"></i>
-          <input type="text" id="form32" class="form-control validate" mdbInputDirective [formControl]="contactFormModalDocumentName">
-          <label data-error="wrong" data-success="right" for="form32"></label>
-        </div>
-
-      </div>
-      <div class="modal-footer d-flex justify-content-center">
-        <button mdbBtn color="unique" class="waves-light" mdbWavesEffect data-toggle="modal" (click)="getDeltaOps(); addNewOption(); frame.hide()">Save document
-          <i class="fa fa-paper-plane-o ml-1"></i>
-        </button>
-      </div>
+<!-- Collapse buttons -->
+<div>
+    <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+      Link with href
+    </a>
+    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample"
+      aria-expanded="false" aria-controls="collapseExample">
+      Button with data-target
+    </button>
+  </div>
+  <!-- / Collapse buttons -->
+  
+  <!-- Collapsible element -->
+  <div class="collapse" id="collapseExample">
+    <div class="mt-3">
+      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
+      keffiyeh helvetica,
+      craft beer labore wes anderson cred nesciunt sapiente ea proident.
     </div>
   </div>
-</div>
-   
-</div> 
-
-<div class="float-ld-right">  
-    <app-forum (postChange)='myPostChange($event);'></app-forum> 
-</div> 
-
-
-
+  <!-- / Collapsible element -->
