--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,6 @@
-<!-- Collapse buttons -->
-<div>
-    <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-      Link with href
-    </a>
-    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample"
-      aria-expanded="false" aria-controls="collapseExample">
-      Button with data-target
-    </button>
-  </div>
-  <!-- / Collapse buttons -->
-  
-  <!-- Collapsible element -->
-  <div class="collapse" id="collapseExample">
-    <div class="mt-3">
-      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
-      keffiyeh helvetica,
-      craft beer labore wes anderson cred nesciunt sapiente ea proident.
+<div class="row">
+    <div class="col-md-6">
+        <mdb-select [options]="optionsSelect" placeholder="Choose your option"></mdb-select>
+        <label>Example label</label>
     </div>
-  </div>
-  <!-- / Collapsible element -->
+</div>
