mis enforme editeur -  correctif contrainte csp

--- a/src/app/appforum.component.html
+++ b/src/app/appforum.component.html
@@ -1,4 +1,4 @@
-<button type="button" mdbBtn color="default" rounded="true" data-toggle="modal" data-target="#basicExample" (click)="frame.show()" class="waves-light"
+<!--<button type="button" mdbBtn color="default" rounded="true" data-toggle="modal" data-target="#basicExample" (click)="frame.show()" class="waves-light"
   mdbWavesEffect> Reflexive writing Forum</button>
 
 <div mdbModal #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -10,8 +10,8 @@
         <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
           <span aria-hidden="true">&times;</span>
         </button>-->
-      </div>
-      <div class="modal-body mx-3">
+       <!-- </div>
+     <div class="modal-body mx-3">
 
         <div class="md-form mb-5">
           <i class="fa fa-tag prefix grey-text"></i>
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 
 
 <!--Section: Comments
