--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,23 @@
 
-<div class="float-md-left">   
-    <form [formGroup]="documentForm">
-            <select formControlName="documentsControl">
-              <option [ngValue]="documents" *ngFor="let documents of listedocument">{{documents.id}}</option>
-            </select>
-            <button mdbBtn type="button" color="default" class="waves-light" size="sm" mdbWavesEffect (click)="addNewOption()">Liste des documents</button>
-            <button mdbBtn type="button" color="default" class="waves-light" size="sm" (click)="getHtmlFromDeltaWithPram()"> Ouvrir Document </button>
-    </form>
-     <app-model [(html)]="htmls" (htmlChange)='myValueChange($event);' 
-         (deltaChange)='myDeltaChange($event);'> </app-model>
-  <button mdbBtn type="submit" color="primary" class="waves-light"
-			 mdbWavesEffect (click)="frame.show()">Enregistrer Document
-           </button> 
-
- <!-- Save document-->
- <div mdbModal #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-body mx-3">
-
-        <div class="md-form mb-5">
-          <i class="fa fa-tag prefix grey-text"></i>
-          <input type="text" id="form32" class="form-control validate" mdbInputDirective [formControl]="contactFormModalDocumentName" placeholder="Donner un nom au document">
-		   <button mdbBtn color="unique" class="waves-light" mdbWavesEffect data-toggle="modal" (click)="getDeltaOps(); addNewOption(); frame.hide()">Enregistrer!
-          <i class="fa fa-paper-plane-o ml-1"></i>
-        </button>
-          <label data-error="wrong" data-success="right" for="form32"></label>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-   
-</div> 
-
-<div class="float-ld-right">  
-    <app-forum (postChange)='myPostChange($event);'></app-forum> 
-</div> 
-
-
+<div class="button-row">
+   <form [formGroup]="documentForm">
+        <select placeholder="Choisir un document" formControlName="documentsControl">
+          <option>--</option>
+          <option  *ngFor="let documents of listedocument" [ngValue]="documents">{{documents.doc_name}} </option>
+        </select>
+    
+       <button mat-button color="primary" (click)="addNewOption()">Liste des documents</button>
+        <button mat-button color="accent" (click)="getHtmlFromDeltaWithPram()"> Ouvrir Document </button>
+        <button mat-button color="warn" (click)="openDialog()">Enregistrer Document </button> 
+       <!-- <a  mat-button color="warn" title="Download JSON" [href]="downloadJsonHref" download="download.json">Exporter Document</a>
+        <input mat-raised-button color="primary" type="file" (change)="upload($event.target.files)" />
+       -->
+      </form>
+     
+</div>  
+   <app-model [(html)]="htmls" (htmlChange)='myValueChange($event);' 
+       (deltaChange)='myDeltaChange($event);'> </app-model>
+ <p></p>
+ <p></p>
+<button mat-raised-button  color="primary" (click)="openDialog()">Enregistrer Document </button> 
 
