--- a/src/app/dialog.html
+++ b/src/app/dialog.html
@@ -1,11 +1,13 @@
-<div mat-dialog-content>
+<mat-dialog-content>
     <p>Donner un nom au document</p>
     <mat-form-field>
-      <input matInput [(ngModel)]="data.documentname">
+      <input matInput 
+      [(ngModel)]="data.documentname">
     </mat-form-field>
-</div>
-<div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Annuler</button>
-    <button mat-button [mat-dialog-close]="data.documentname" cdkFocusInitial>Valider</button>
- </div> 
+</mat-dialog-content>
+
+<mat-dialog-actions>
+    <button class="mat-raised-button" (click)="close()">Annuler</button>
+    <button class="mat-raised-button mat-primary" [mat-dialog-close]="data.documentname">Enregistrer</button>
+ </mat-dialog-actions> 
 
