--- a/src/app/formulaireEnquete/radio-ng-model-example.css
+++ b/src/app/formulaireEnquete/radio-ng-model-example.css
@@ -11,11 +11,14 @@
 }
 
 .example-radio-group {
-  display: contents;
-  flex-direction: row;
+  display:  inline-flex;
+  flex-direction: column;
 }
 
 .example-radio-button {
   margin: 5px;
 }
 
+.example-full-width {
+  width: 5%;
+}
