--- a/src/app/angularMatselect/src/app/app.component.matselect.scss
+++ b/src/app/angularMatselect/src/app/app.component.matselect.scss
@@ -1,3 +1,19 @@
 p {
   font-family: Lato;
 }
+
+
+#global{
+  width:100%;
+}
+#droite, #gauche {
+    display: inline-block;
+    vertical-align: top;
+}
+#gauche {
+    width:60%; 
+}
+ 
+#droite {
+    width: 40%;
+}
