--- a/src/app/appforum.component.html
+++ b/src/app/appforum.component.html
@@ -1,69 +1,43 @@
-<!--<button type="button" mdbBtn color="default" rounded="true" data-toggle="modal" data-target="#basicExample" (click)="frame.show()" class="waves-light"
-  mdbWavesEffect> Reflexive writing Forum</button>
+<mat-accordion>
+  <mat-expansion-panel (opened)="panelOpenState = false"
+                       (closed)="panelOpenState = true">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Forum de discussion
+      </mat-panel-title>
+      <mat-panel-description>
+        Dépiler pour poster un commentaire
+      </mat-panel-description>
+    </mat-expansion-panel-header>
 
-<div mdbModal #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Make comment</h4>
-        <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
-          <span aria-hidden="true">&times;</span>
-        </button>-->
-       <!-- </div>
-     <div class="modal-body mx-3">
+    
+   <mat-form-field formControlName="contactFormModalMessage">
+       <textarea matInput #message maxlength="256" placeholder="commentaire"> </textarea>
+      <mat-hint align="start"><strong>Ne divulguez pas d'informations personnelles</strong> </mat-hint>
+      <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
+    </mat-form-field>
 
-        <div class="md-form mb-5">
-          <i class="fa fa-tag prefix grey-text"></i>
-          <input type="text" id="form32" class="form-control validate" mdbInputDirective [formControl]="contactFormModalSubject">
-          <label data-error="wrong" data-success="right" for="form32">Subject</label>
-        </div>
-
-        <div class="md-form">
-          <i class="fa fa-pencil prefix grey-text"></i>
-          <textarea type="text" id="form8" class="md-textarea form-control" rows="1" mdbInputDirective [formControl]="contactFormModalMessage"></textarea>
-          <label data-error="wrong" data-success="right" for="form8">Your comment</label>
-        </div>
-
-      </div>
-      <div class="modal-footer d-flex justify-content-center">
-        <button mdbBtn color="unique" class="waves-light" mdbWavesEffect data-toggle="modal" (click)="addPost()" (click)="frame.hide()" >Submit Post
-          <i class="fa fa-paper-plane-o ml-1"></i>
-        </button>
-      </div>
-    </div>
-  </div>
-</div>-->
-
-
-<!--Section: Comments
-<section class="my-5"> -->
-
-    <!-- Card header 
-    <div class="card-header border-0 font-weight-bold">2 comments</div>
+   <button mat-raised-button color="accent"  (click)=" addPost()">Publier post</button>
   
-    <div class="media d-block d-md-flex mt-4">
-      <img class="card-img-64 d-flex mx-auto mb-3" src="../assets/pictures/jmgilliot.jpg" alt="Generic placeholder image">
-      <div class="media-body text-center text-md-left ml-md-3 ml-0">
-        <h5 class="font-weight-bold mt-0">
-          <a href="">Jean-Marie Gilliot</a>
-          <a href="" class="pull-right">
-            <i class="fa fa-reply"></i>
-          </a>
-        </h5>
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        <div class="media d-block d-md-flex mt-4">
-          <img class="card-img-64 d-flex mx-auto mb-3" src="../assets/pictures/mouhamadou.jpeg" alt="Generic placeholder image">
-          <div class="media-body text-center text-md-left ml-md-3 ml-0">
-            <h5 class="font-weight-bold mt-0">
-              <a href="">Mouhamadou NIANG</a>
-              <a href="" class="pull-right">
-                <i class="fa fa-reply"></i>
-              </a>
-            </h5>
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque
-            ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-          </div>
-        </div> 
--->
+  </mat-expansion-panel>
+</mat-accordion>
+<p></p>
+<mat-card style="margin: 12px;" class="example-card" *ngFor="let postes of listPosts" >
+  <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{postes.value}}</mat-card-title>
+      <mat-card-subtitle>{{postes.date}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src='../assets/pictures/mouhamadou.jpeg' height="100" width="100" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+      <p>
+          {{postes.viewValue}}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>Repondre</button>
+      <button mat-button>Partager</button>
+    </mat-card-actions>
+    
+  </mat-card>
+
