service rest sedela

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
             
          </div>
          <div id="droite">
-          <app-forum></app-forum>
+          <app-forum [postsForum]="listPosts"></app-forum>
         </div>
 
     </div>
